test/compile_errors/stage1/exe/missing_main_fn_in_executable.zig


// error
// backend=stage1
// target=native
// output_mode=Exe
//
// error: root source file has no member called 'main'
